--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^6.11.2",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22"
   }
 }
