--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
+    "react-lottie": "^1.2.3",
     "react-redux": "^8.1.1",
     "react-router": "^6.14.1",
     "react-router-dom": "^6.14.1",
