--- a/package.json
+++ b/package.json
@@ -14,14 +14,28 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "browserslist": "^4.23.0",
+    "caniuse-lite": "^1.0.30001620",
     "cloudinary": "^1.37.3",
-    "cookie-parser": "^1.4.6",
     "concurrently": "^7.5.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^6.11.2",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
