--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "frontend": "npm start --prefix frontend",
-    "server": "nodemon server.js",
-    "dev": "concurrently \"npm run server\" \"npm run frontend\"",
-    "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+    "server": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
