--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,3 +1,5 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 # dependencies
 node_modules
 .pnp
@@ -6,6 +8,8 @@ node_modules
 # testing
 coverage
 
+# production
+build
 
 # misc
 .DS_Store
@@ -13,3 +17,7 @@ coverage
 .env.development.local
 .env.test.local
 .env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
