--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "js-cookie": "^3.0.5",
     "lottie-react": "^2.4.0",
     "npm": "^10.8.0",
     "react": "^18.3.1",
@@ -45,6 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "https://harmony-of-word.onrender.com"
+  }
 }
